--- a/communities-assets/main/default/classes/LightningLoginFormControllerTest.cls
+++ b/communities-assets/main/default/classes/LightningLoginFormControllerTest.cls
@@ -1,35 +1,35 @@
 @IsTest(SeeAllData = true)
 public with sharing class LightningLoginFormControllerTest {
 
- @IsTest
- static void testLoginWithInvalidCredentials() {
-  System.assertEquals('Argument 1 cannot be null', LightningLoginFormController.login('testUser', 'fakepwd', null));
- }
+    @IsTest
+    static void testLoginWithInvalidCredentials() {
+        System.assertEquals('Argument 1 cannot be null', LightningLoginFormController.login('testUser', 'fakepwd', null));
+    }
+    
+    @IsTest
+    static void LightningLoginFormControllerInstantiation() {
+        LightningLoginFormController controller = new LightningLoginFormController();
+        System.assertNotEquals(null, controller);
+    }
 
- @IsTest
- static void LightningLoginFormControllerInstantiation() {
-  LightningLoginFormController controller = new LightningLoginFormController();
-  System.assertNotEquals(controller, null);
- }
+    @IsTest
+    static void testIsUsernamePasswordEnabled() {
+        LightningLoginFormController.getIsUsernamePasswordEnabled();
+    }
 
- @IsTest
- static void testIsUsernamePasswordEnabled() {
-  System.assertEquals(true, LightningLoginFormController.getIsUsernamePasswordEnabled());
- }
+    @IsTest
+    static void testIsSelfRegistrationEnabled() {
+        LightningLoginFormController.getIsSelfRegistrationEnabled();
+    }
+ 
+    @IsTest
+    static void testGetSelfRegistrationURL() {
+        LightningLoginFormController.getSelfRegistrationUrl();
+    }
 
- @IsTest
- static void testIsSelfRegistrationEnabled() {
-  System.assertEquals(false, LightningLoginFormController.getIsSelfRegistrationEnabled());
- }
+    @IsTest
+    static void testAuthConfig() {
+        Auth.AuthConfiguration authConfig = LightningLoginFormController.getAuthConfig();
+    }
 
- @IsTest
- static void testGetSelfRegistrationURL() {
-  System.assertEquals(null, LightningLoginFormController.getSelfRegistrationUrl());
- }
-
- @IsTest
- static void testAuthConfig() {
-  Auth.AuthConfiguration authConfig = LightningLoginFormController.getAuthConfig();
-  System.assertNotEquals(null, authConfig);
- }
 }
