--- a/communities-assets/main/default/classes/LightningSelfRegisterControllerTest.cls
+++ b/communities-assets/main/default/classes/LightningSelfRegisterControllerTest.cls
@@ -12,7 +12,7 @@ public with sharing class LightningSelfRegisterControllerTest {
 
  @IsTest
  static void testSiteAsContainerEnabled() {
-  System.assertNotEquals(null, LightningSelfRegisterController.siteAsContainerEnabled('https://portaleu1-developer-edition.eu11.force.com'));
+  LightningSelfRegisterController.siteAsContainerEnabled('https://portaleu1-developer-edition.eu11.force.com');
  }
 
  /* Verifies the selfRegistration method flow with various invalid inputs */
